RESOLVED FIXED293174
MediaRecorderPrivateEncoder shouldn't use lock on audio thread.
https://bugs.webkit.org/show_bug.cgi?id=293174
Summary MediaRecorderPrivateEncoder shouldn't use lock on audio thread.
Jean-Yves Avenard [:jya]
Reported 2025-05-17 00:55:07 PDT
MediaRecorderPrivateEncoder::writeDataToRingBuffer takes a lock on the audio thread. this is bad.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-17 00:55:17 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-05-17 04:31:33 PDT
EWS
Comment 3 2025-05-19 04:08:36 PDT
Committed 295090@main (61d17594f7e3): <https://commits.webkit.org/295090@main> Reviewed commits have been landed. Closing PR #45544 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.